feat: 특정 랩실의 각 일마다 대여 가능한 횟수 조회 레포지토리 및 서비스 메서드 구현