@@ -1,19 +1,19 @@
 package com.girigiri.kwrental.asset.service;
 
-import com.girigiri.kwrental.asset.domain.Rentable;
-import com.girigiri.kwrental.asset.exception.AssetNotFoundException;
-import com.girigiri.kwrental.asset.repository.AssetRepository;
-import com.girigiri.kwrental.equipment.dto.response.RemainQuantitiesPerDateResponse;
-import com.girigiri.kwrental.equipment.dto.response.RemainQuantityPerDateResponse;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
+
+import com.girigiri.kwrental.asset.domain.Rentable;
+import com.girigiri.kwrental.asset.dto.response.RemainQuantitiesPerDateResponse;
+import com.girigiri.kwrental.asset.dto.response.RemainQuantityPerDateResponse;
+import com.girigiri.kwrental.asset.exception.AssetNotFoundException;
+import com.girigiri.kwrental.asset.repository.AssetRepository;
 
 @Service
 public class AssetService {
@@ -26,9 +26,10 @@ public class AssetService {
 
     public RemainQuantitiesPerDateResponse getReservableCountPerDate(final Map<LocalDate, Integer> reservedAmounts, final Rentable rentable) {
         final List<RemainQuantityPerDateResponse> remainQuantityPerDateResponses = reservedAmounts.keySet().stream()
-                .map(date -> new RemainQuantityPerDateResponse(date, rentable.getTotalQuantity() - reservedAmounts.get(date)))
-                .sorted(Comparator.comparing(RemainQuantityPerDateResponse::getDate))
-                .collect(Collectors.toList());
+            .map(date -> new RemainQuantityPerDateResponse(date,
+                rentable.getTotalQuantity() - reservedAmounts.get(date)))
+            .sorted(Comparator.comparing(RemainQuantityPerDateResponse::getDate))
+            .toList();
         return new RemainQuantitiesPerDateResponse(remainQuantityPerDateResponses);
     }
 
